<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="division">DIVISION</string>
    <string name="multiplicacion">MULTIPLICACION</string>
    <string name="suma">SUMA</string>
    <string name="resta">RESTA</string>
    <string name="app_titulo">CALCULADORA</string>
    <string name="num1_text">Numero 1</string>
    <string name="num2_text">Numero 2</string>
    <string name="app_name">Practica3</string>
</resources>